# CMakeScratchPad

./: .gitignore  CMakeLists.txt  README.MD  azure-pipelines.yml  nuget.config  vcpkg.json
.github/workflows/: cmake.yml
SubModule1/: CMakeLists.txt  main.cpp  main.h  worker.config.json
